See the README for more information on what needs to be updated. 

* FIXED: HTTP auth failures
* FIXED: Request timeouts should count towards failures
* FIXED: Stella::Client ID was changing between requests in certain conditions
* FIXED: HTTP delete now works correctly
* FIXED: Missing rsequential method in Container
* FIXED: Don't override specified user agent header
* CHANGE: A proper message displayed when no host specified
* CHANGE: Don't append httpclient info to User-Agent header
* CHANGE: param and header helper methods now return strings instead of Procs.
* CHANGE: Verbosity level 2 now prints only params, 3 w/ headers, 4 w/ body
* ADDED: follow responses can contain definition blocks
* ADDED: Support for specifying default path prefix on CLI
* ADDED: Support for specifying timeouts


* TODO: Look into ERB template issue. Call ERB.new before test starts. 


#### 0.7.7 (2009-12-05) ###############################

* FIXED: JSON parse error when nil body 
* FIXED: URI query parameter encoding
* CHANGE: Removed Stella::Testplan::Stats
* CHANGE: Better output for errors during functional tests
* CHANGE: Global variables now implemented in Stella::Testplan.global
  and can be used like usecase and request resources.
* CHANGE: Variable replacement now checks the client container 
  resources before the usecase resources. 
* ADDED: Stella::Testplan#to_json
* ADDED: Stella::Data::Helpers#read_file
* ADDED: Stella::Data::Helpers#resequential
* ADDED: Stella::Data::Helpers#path
* ADDED: no-param, no-header options
* ADDED: Follow redirects within one request definition
* ADDED: Support for specifying HTTP AUTH domain in usecase config 


#### 0.7.6 (2009-11-24) ###############################

* FIXED: httpclient fix: use full request URI (i.e. path and query string) in authentication (NOTE: SSPINegotiateAuth and NegotiateAuth not tested)
* FIXED: Use request URI in authentication domain


#### 0.7.5 (2009-11-16) ###############################
