@@ -23,6 +23,7 @@ See the README for more information on what needs to be updated.
 * FIXED: HTTP delete now works correctly
 * FIXED: Missing rsequential method in Container
 * FIXED: Don't override specified user agent header
+* FIXED: variables testplan example. 
 * CHANGE: A proper message displayed when no host specified
 * CHANGE: Don't append httpclient info to User-Agent header
 * CHANGE: param and header helper methods now return strings instead of Procs.
@@ -30,6 +31,7 @@ See the README for more information on what needs to be updated.
 * ADDED: follow responses can contain definition blocks
 * ADDED: Support for specifying default path prefix on CLI
 * ADDED: Support for specifying timeouts
+* ADDED: Friendly error for empty request configs
 
 
 * TODO: Look into ERB template issue. Call ERB.new before test starts. 
